<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:padding="10dp"
              >

	<TextView
	    android:id="@+id/settings_single_feed_description"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="10.0sp"
	    android:text="@string/settings_single_feed_description_add" >

	</TextView>

	<TextView
	    android:id="@+id/settings_single_feed_url_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/settings_single_feed_url_title" >

	</TextView>

	<EditText
	    android:id="@+id/settings_single_feed_url"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/settings_single_feed_empty_url"
	    android:inputType="textUri"
	    android:text="@string/settings_single_feed_default_url" >

		<requestFocus/>
	</EditText>
	<LinearLayout
	    android:id="@+id/LinearLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	    <Button
		    android:id="@+id/settings_single_feed_cancel_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="cancelButtonClicked"
		    android:text="@string/button_cancel" >
	    </Button>
		<Button
		    android:id="@+id/settings_single_feed_save_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="saveButtonClicked"
		    android:text="@string/button_save" >
		</Button>
	</LinearLayout>

</LinearLayout>

